2004-02-05  Atsushi Enomoto  <atsushi@ximian.com>

	* DefaultContext.cs : trivial processing order fix.

2004-01-27  Atsushi Enomoto  <atsushi@ximian.com>

	* DefaultContext.cs : Avoid exception if possible.
	* Iterator.cs : Fixed PrecedingSiblingIterator.MoveNext(). When the
	  nav was positioned at the first, it incorrectly points itself.
	  Don't add names to name table while it is useless and expensive.

2004-01-08  Nick Drochak <ndrochak@ieee.org>

	* Iterator.cs: Removed unused variable.
	
2003-12-18 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Parser.jay : now it supresses error output from jay.
	* DefaultContext.cs : (XPathFunctionSubstring) exclude -Infinity.
	* Tokenizer.cs : better error message.
	* XPathDocument.cs : Use XmlValidatingReader to support id() function.
	  (just found MS.NET actually supports it)

2003-12-16 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Iterator.cs : On its iteration, moving Current must not affect to
	  MoveNext(). To assure this, Current must be a clone of navigator.
	  Removed unused code.

2003-12-07 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Tokenizer.cs : Removed some TODOs. (trivial ;-)
	* Iterator.cs : ParensIterator can inherit from BaseIterator.
	  SlashIterator copy .ctor() always failed to clone. This fixes Count.

2003-12-03 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Expression.cs : XPathSorters.Compare() should compare document
	  position. See last sentence of XSLT 1.0 secion 10.

2003-12-03 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* DefaultContext.cs : Overrode all functions' ToString().
	  XPathFunctions.ToNumber() trims whitespaces at both side.
	  Fixed NullReferenceException in normalize-space().
	* Iterator.cs : Fixed AncestorOrSelfIterator.MoveNext() didn't handle
	  attribute or namespace node correctly.
	  SlashIterator.Clone() didn't clone "next node iterator" correctly.
	  EnumeratorIterator.ctor() should raise an error (not at Clone())
	  when the target IEnumerator is not ICloneable.
