@@ -1,3 +1,8 @@
+2004-02-08  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* DefaultContext.cs, Expression.cs, Iterator.cs :
+	  tiny foreach elimination.
+
 2004-02-05  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* DefaultContext.cs : trivial processing order fix.
